# Project-homework

./: .env.example  .flake8  .gitignore  README.md  config.py  proba.txt  pyproject.toml
data/: test_operation.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  proba.txt  process_bank.py  processing.py  reading_transactions.py  utils.py  widget.py
tests/: conftest.py  proba.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reading_transactions.py  test_utils.py  test_widget.py
